--- a/package.json
+++ b/package.json
@@ -1,15 +1,39 @@
 {
-  "name": "cloud-ui",
+  "name": "cloooud-ui",
   "version": "0.1.0",
-  "private": true,
+  "description": "Cloooud演示组件库",
+  "main": "dist/index.js.umd.js",
+  "keywords": [
+    "cloooud-ui",
+    "vue",
+    "ui"
+  ],
+  "author": "cloud",
+  "files": [
+    "dist",
+    "components"
+  ],
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve --open",
+    "build": "npm run build:js && npm run build:css",
+    "lint": "vue-cli-service lint",
+    "build:js": "set NODE_OPTIONS=--openssl-legacy-provider && webpack --config ./webpack.components.js",
+    "build:css": "npx gulp sass",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "dependencies": {
+    "cloooud-ui": "^0.1.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "gulp": "^4.0.2",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sass": "^5.1.0",
+    "node": "^20.6.0",
+    "sass": "^1.68.0",
+    "sass-loader": "^7.3.1",
+    "vue": "^2.6.14",
+    "webpack": "^4.23.0",
+    "webpack-cli": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,7 +43,10 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "style-loader": "^3.3.3",
+    "vue-loader": "^15.10.0",
+    "vue-template-compiler": "^2.6.14",
+    "vuepress": "^1.9.10"
   },
   "eslintConfig": {
     "root": true,
